[package]
name = "rocket-ts-bridge"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.9"
syn = { version = "1.0.72", features = ["extra-traits"] }

[dev-dependencies]
trybuild = { version = "1.0.42", features = ["diff"] }
